adding modified Bootstrap site/index.html file

--- a/Bootstrap site/index.html
+++ b/Bootstrap site/index.html
@@ -14,7 +14,12 @@
 </head>
 
 <body>
-    <h1 class="text-center bg-info">Hello, world!</h1>
+    <div class="container" style="background-color: yellow">
+        <h1>MIgrant Solutions</h1>
+    </div>
+    <div class="container-fluid" style="background-color: blue;">
+        <h1>migrant solutions</h1>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
