adding modified Books/src/Index.html

--- a/Books/src/Index.html
+++ b/Books/src/Index.html
@@ -152,6 +152,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, autem.</p>
                 <div class="cards">
                     <div class="d-flex flex-row justify-content-center flex-wrap">
+
+                        <!-- First Card -->
                         <div class="card">
                             <div class="card-body">
                                 <div class="title">
@@ -162,7 +164,45 @@
                                 </p>
                                 <div class="pricing">
                                     <h1>$77.99</h1>
-                                    <a href="#" class="btn btn-dark px-5 py-2">Purchase Now</a>
+                                    <a href="#" class="btn btn-dark px-5 py-2 mb-5">
+                                        >Purchase Now
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Second Card -->
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">E-book</h5>
+                                </div>
+                                <p class="card-text">
+                                    With supporting text below as a natural lead-in.
+                                </p>
+                                <div class="pricing">
+                                    <h1>$99.99</h1>
+                                    <a href="#" class="btn btn-dark px-5 py-2 mb-5">
+                                        >Purchase Now
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Third Card -->
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">Print Copy</h5>
+                                </div>
+                                <p class="card-text">
+                                    With supporting text below as a natural lead-in.
+                                </p>
+                                <div class="pricing">
+                                    <h1>$58.99</h1>
+                                    <a href="#" class="btn btn-dark px-5 py-2 mb-5">
+                                        >Purchase Now
+                                    </a>
                                 </div>
                             </div>
                         </div>
