--- a/Books/src/Index.html
+++ b/Books/src/Index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/0e22b665e8.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -209,7 +210,42 @@
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section class="section-3 container-fluid p-0 text-center">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <h1>Download Our App For all Platforms</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque in ducimus molestiae ad officia
+                        repudiandae mollitia rem, qui error minima repellendus cumque nesciunt doloribus? Dicta
+                        exercitationem quaerat culpa, est ipsam voluptatem officiis, similique vel aliquid error nulla
+                        itaque odio laudantium voluptate illum? Itaque, optio dolorem dolores necessitatibus quia
+                        molestias vitae?</p>
+                </div>
+            </div>
+            <div class="platform row">
+                <div class="col-md-6 col-sm-12 text-right">
+                    <div class="desktop shadow-lg">
+                        <div class="d-flex flex-row justify-content-center">
+                            <i class="fas fa-desktop fa-3x py-2 pr-3"></i>
+                            <div class="text text-left">
+                                <h3 class="pt-1 m-0">Desktop</h3>
+                                <p class="p-0 m-0">On Website</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="desktop shadow-lg">
+                    <div class="d-flex flex-row justify-content-center">
+                        <i class="fas fa-mobile-alt fa-3x py-2 pr-3"></i>
+                        <div class="text text-left">
+                            <h3 class="pt-1 m-0">On Mobile</h3>
+                            <p class="p-0 m-0">On Play Store</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 text-left"></div>
+            </div>
         </section>
 
     </main>
