--- a/Books/src/Index.html
+++ b/Books/src/Index.html
@@ -248,6 +248,96 @@
             </div>
         </section>
 
+        <section class="section-4">
+            <div class="container text-center">
+                <h1 class="text-dark">What our Reader's Say About us</h1>
+                <p class="text-secondary">Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="team row">
+                <div class="col-md-4 col-12 text-center">
+                    <div class="card mr-2 d-inline-block shadow-lg">
+                        <div class="card-img-top">
+                            <img src="../assets//UI-face-3.jpg" alt="Member" class="img-fluid">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">Blalock Jolene</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, repellendus harum eligendi
+                                omnis non alias ad, neque odit labore incidunt numquam quos ratione laudantium enim
+                                asperiores, voluptas officiis illum debitis.
+                            </p>
+                            <a href="#" class="text-primary text-decoration-none">Go Somewhere</a>
+                            <p class="text-black-50">CEO at Google</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-12">
+                    <!-- Carousel Started -->
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active text-center">
+                                <!-- Card 2 -->
+                                <div class="card mr-2 d-inline-block shadow-lg">
+                                    <div class="card-img-top">
+                                        <img src="../assets/UI-face-1.jpg" alt="Member" class="img-fluid">
+                                    </div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Allen Agnes</h3>
+                                        <p class="card-text">
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, repellendus
+                                            harum eligendi
+                                            omnis non alias ad, neque odit labore incidunt numquam quos ratione
+                                            laudantium enim
+                                            asperiores, voluptas officiis illum debitis.
+                                        </p>
+                                        <a href="#" class="text-primary text-decoration-none">Go Somewhere</a>
+                                        <p class="text-black-50">CEO at Google</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item text-center">
+                                <!-- Card 3 -->
+                                <div class="card mr-2 d-inline-block shadow-lg">
+                                    <div class="card-img-top">
+                                        <img src="../assets/UI-face-2.jpg" alt="Member" class="img-fluid">
+                                    </div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Amiel Barbara</h3>
+                                        <p class="card-text">
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, repellendus
+                                            harum eligendi
+                                            omnis non alias ad, neque odit labore incidunt numquam quos ratione
+                                            laudantium enim
+                                            asperiores, voluptas officiis illum debitis.
+                                        </p>
+                                        <a href="#" class="text-primary text-decoration-none">Go Somewhere</a>
+                                        <p class="text-black-50">CEO at Google</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-12 text-center">
+                    <!-- Card 4 -->
+                    <div class="card mr-2 d-inline-block shadow-lg">
+                        <div class="card-img-top">
+                            <img src="../assets//UI-face-4.jpg" alt="Member" class="img-fluid">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">Olivia Louis</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, repellendus harum eligendi
+                                omnis non alias ad, neque odit labore incidunt numquam quos ratione laudantium enim
+                                asperiores, voluptas officiis illum debitis.
+                            </p>
+                            <a href="#" class="text-primary text-decoration-none">Go Somewhere</a>
+                            <p class="text-black-50">CEO at Google</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 
