--- a/Books/src/Index.html
+++ b/Books/src/Index.html
@@ -339,9 +339,53 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container-fluid p-0">
+            <div class="row text-left">
+                <div class="col-md-5 col-md-5">
+                    <h1 class="text-light">About Us</h1>
+                    <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet quos saepe quia
+                        numquam possimus. Necessitatibus.
+                    </p>
+                    <p class="pt-4 text-muted">
+                        Copyright &copy All rights reserved | This template is made with by <span>Daily Tuition</span>
+                    </p>
+                </div>
+                <div class="col-md-5">
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+                    <h4 class="text-light">Newsletter</h4>
+                    <p class="text-muted">Stay Updated</p>
+                    <form class="form-inline">
+                        <div class="col pl-0">
+                            <div class="input-group pr-5">
+                                <input type="text" class="form-control bg-dark text-white" placeholder="Email">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fas fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="col-md-2 col-sm-12">
+
+                    <h4 class="text-light">Follow Us</h4>
+                    <p class="text-muted">Let us be social</p>
+                    <div class="column">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src=" https://code.jquery.com/jquery-3.4.1.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
