--- a/Books/src/Index.html
+++ b/Books/src/Index.html
@@ -259,7 +259,7 @@
                 <div class="col-md-4 col-12 text-center">
                     <div class="card mr-2 d-inline-block shadow-lg">
                         <div class="card-img-top">
-                            <img src="../assets//UI-face-3.jpg" alt="Member" class="img-fluid">
+                            <img src="../assets//UI-face-3.jpg" alt="Member" class="img-fluid border-radius p-4">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">Blalock Jolene</h3>
@@ -281,7 +281,8 @@
                                 <!-- Card 2 -->
                                 <div class="card mr-2 d-inline-block shadow-lg">
                                     <div class="card-img-top">
-                                        <img src="../assets/UI-face-1.jpg" alt="Member" class="img-fluid">
+                                        <img src="../assets/UI-face-1.jpg" alt="Member"
+                                            class="img-fluid rounded-circle w-50 p-4">
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">Allen Agnes</h3>
@@ -301,7 +302,8 @@
                                 <!-- Card 3 -->
                                 <div class="card mr-2 d-inline-block shadow-lg">
                                     <div class="card-img-top">
-                                        <img src="../assets/UI-face-2.jpg" alt="Member" class="img-fluid">
+                                        <img src="../assets/UI-face-2.jpg" alt="Member"
+                                            class="img-fluid rounded-circle w-50 p-4">
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">Amiel Barbara</h3>
@@ -324,7 +326,7 @@
                     <!-- Card 4 -->
                     <div class="card mr-2 d-inline-block shadow-lg">
                         <div class="card-img-top">
-                            <img src="../assets//UI-face-4.jpg" alt="Member" class="img-fluid">
+                            <img src="../assets//UI-face-4.jpg" alt="Member" class="img-fluid border-radius p-4">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">Olivia Louis</h3>
