--- a/pattern/11_Pattern_Project/Starter/index.html
+++ b/pattern/11_Pattern_Project/Starter/index.html
@@ -33,6 +33,53 @@
         <a href="" class="btn btn-success">Another Thing</a>
     </section>
 
+    <section id="gallery">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/pattern1.jpg" alt="" style="height: 16.4rem; width: 100%">
+                        <div class="card-body">
+                            <h5 class="card-title">First Thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui veritatis
+                                quae
+                                ipsam! Nostrum in cumque ab corporis, nihil culpa dolorum.</p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/pattern2.jpg" alt="" style="height: 16.4rem; width: 100%">
+                        <div class="card-body">
+                            <h5 class="card-title">First Thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+                                veritatis
+                                quae
+                                ipsam! Nostrum in cumque ab corporis, nihil culpa dolorum.</p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/pattern3.jpg" alt="" style="height: 16.4rem; width: 100%">
+                        <div class="card-body">
+                            <h5 class="card-title">First Thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+                                veritatis
+                                quae
+                                ipsam! Nostrum in cumque ab corporis, nihil culpa dolorum.</p>
+                            <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS, then Font Awesome -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
