adding modified app.css, index.html files and new lolli_icon.png and milk.jpg images

--- a/Bootstrap 4/13_Museum_Of_Candy/Starter/index.html
+++ b/Bootstrap 4/13_Museum_Of_Candy/Starter/index.html
@@ -60,6 +60,40 @@
         </div>
     </section>
 
+    <section class="container-fluid px-0">
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/milk.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt aut at
+                            officia neque
+                            laudantium exercitationem distinctio sint nulla pariatur? Perferendis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/milk.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt aut at
+                            officia neque
+                            laudantium exercitationem distinctio sint nulla pariatur? Perferendis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
