adding modified app.css and index.html files in Bootstarap 4 folder

--- a/Bootstrap 4/13_Museum_Of_Candy/Starter/index.html
+++ b/Bootstrap 4/13_Museum_Of_Candy/Starter/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt aut at
@@ -78,12 +78,28 @@
             </div>
         </div>
         <div class="row align-items-center content">
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt aut at
+                            officia neque
+                            laudantium exercitationem distinctio sint nulla pariatur? Perferendis.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="imgs/tennis-ball.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row align-items-center content">
             <div class="col-md-6 order-2 order-md-1">
-                <img src="imgs/milk.jpg" alt="" class="img-fluid">
+                <img src="imgs/sprinkles.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt aut at
@@ -104,6 +120,15 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var $nav = $("#mainNavBar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            });
+        });
     </script>
 </body>
 
